# opencode-research-mcp

./: .gitignore  BENCHMARK.md  README.md  publisher_apis.py  pyproject.toml  requirements.txt  research_bundle.py
agents/: researcher.md
examples/: opencode.json
tests/: test_smoke.py
